Reset-Password prep

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
     <input type="email" placeholder="Email" id="email_field" />
     <input type="password" placeholder="Password" id="password_field" />
     <button class="login-buttonMain-1" onclick="login()">Login</button>
+    <div class="forgot-password-div">
+        <span class="forgotPassword-s">Forgot your password?</span>
+        <button onclick="resetPassword()" type="button" class="forgotPassword-button">
+            <div class="forgotPasswordButton-div">Get help singing in.</div>
+        </button>
+    </div>
     <div class="need-account-div">
         <span class="needAccount-S1">Need an account?</span>
         <button onclick="registerButtonClick()" type="button" class="registerButton-small1">
