Reset-password Email working with errors.

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Sapp | Reset Password</title>
+    <script src="js/reset-password.js"></script>
 </head>
 <body>
-
+    <span>Yeah this is a work in progress...</span>
 </body>
 </html>
