--- a/Emails/resetPW_email_template.html
+++ b/Emails/resetPW_email_template.html
@@ -6,5 +6,81 @@
 </head>
 <body>
 
+<p class="logo">Sapp</p>
+<div class="container">
+    <h1 class="header text">Password Reset</h1>
+    <p class="text">We heard that you lost your Sapp Password. Sorry to hear that!</p>
+    <p class="text top">But don't sweat it! You can click the following button to reset your password:</p>
+    <a href="%LINK%"><button class="button-container" type="button">Reset Your Password</button></a>
+    <p class="text bottom">If you don't use this link within 1 hour, it will expire. To get a new password reset link, visit: <a href="https://sapp-app.tk/reset-password"></a></p>
+    <p class="text">Thanks,</p>
+    <p class="text">The Sapp Team.</p>
+    <p class="button-container"></p>
+</div>
+<div class="footer">
+    <p class="footer-text">You are receiving this email because a password reset was requested for you account. </p>
+    <p class="footer-text">Sapp, Ltd・ Zach Ludwick.</p>
+</div>
+
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+    @import url("https://fonts.cdnfonts.com/css/kg-a-little-spark");
+    .text, button {
+        font-family: 'Poppins', sans-serif;
+    }
+
+    .footer {
+        margin-left: 45px;
+        margin-right: 45px;
+    }
+
+    .footer-text {
+        font-family: 'Poppins', sans-serif;
+        color: rgba(181, 181, 181, .9);
+        text-align: center;
+    }
+
+    .container {
+        margin-left: 5px;
+        margin-right: 5px;
+        border: 1px solid rgba(189, 189, 189, .8);
+        border-radius: 10px;
+    }
+
+
+    .text {
+        padding-left: 15px;
+    }
+
+    .header {
+        font-weight: bold;
+        padding-left: 12px;
+    }
+
+    .logo {
+        font-weight: bold;
+        font-size: 70px;
+        font-family: 'KG A Little Spark', sans-serif;
+        text-align: center;
+
+        margin-top: 25px;
+        margin-bottom: 15px;
+    }
+
+    button {
+        margin: 0 auto;
+        background: rgb(0, 179, 45);
+        color: white;
+        border: 1px solid rgb(0, 179, 45);
+        border-radius: 5px;
+        padding: 13px;
+        font-size: 15px;
+        font-weight: bold;
+        margin-left: 12px;
+    }
+
+
+</style>
+
 </body>
 </html>
