--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <input type="email" placeholder="Email" id="reset_pw_email_field">
     <button class="reset_password_button_submit" type="button" onclick="resetPassword()">Reset Password</button>
     <span class="span_reset_error" id="reset_password_error">Error</span>
+    <span class="span_success" id="reset_password_success">Complete</span>
 </div>
 
 <div id="user_div" class="loggedin-div">
