--- a/reset-password.html
+++ b/reset-password.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sapp | Reset Password</title>
-    <script src="js/reset-password.js"></script>
+    <link rel="stylesheet" href="css/reset-password.css">
 </head>
 <body>
 <div class="reset-pw-div" id="reset-pw">
@@ -11,11 +11,8 @@
     <input type="email" placeholder="Email" id="reset_pw_email_field">
     <button class="reset_password_button_submit" type="button" onclick="resetPassword()">Reset Password</button>
     <span class="span_reset_error" id="reset_password_error">Error</span>
+    <span class="span_success" id="reset_password_success">Complete</span>
 </div>
-
-<style>
-
-</style>
 
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/8.4.2/firebase-app.js"></script>
@@ -41,6 +38,7 @@
     firebase.initializeApp(firebaseConfig);
     firebase.analytics();
 </script>
+<script src="js/reset-password.js"></script>
 
 </body>
 </html>
