--- a/index.html
+++ b/index.html
@@ -71,9 +71,11 @@
 
 <div class="register-user" id="register-user-div">
     <h3>Sapp | Register</h3>
-    <input type="email" placeholder="Email" id="register_email_field">
-    <!--- <input type="text" placeholder="Full name" id="register_fullname_field"> --->
+    <input type="text" placeholder="Fullname" id="register_fullname_field">
+    <input type="text" placeholder="Username" id="register_username_field">
     <input type="password" placeholder="Password" id="register_password_field">
+    <input type="email" placeholder="Email" id="register_email_field">
+
 
     <button onclick="register()" type="button" class="register-submit-button">
         <div class="register-submit-button-text">Sign Up</div>
@@ -85,12 +87,12 @@
 </div>
 
 <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.4.2/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
 
-<script src="https://www.gstatic.com/firebasejs/8.4.2/firebase.js"></script>
-<!-- TODO: Add SDKs for Firebase products that you want to use
+<script src="https://www.gstatic.com/firebasejs/8.4.3/firebase.js"></script>
+<!-- SDK Libraries.
      https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/8.4.2/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-analytics.js"></script>
 
 <script>
     // Your web app's Firebase configuration
@@ -108,6 +110,7 @@
     firebase.initializeApp(firebaseConfig);
     firebase.analytics();
 </script>
+
 <script src="js/index.js"></script>
 
 
